# domain-manager

./: .gitignore  CMakeLists.txt  Dockerfile  MDomainbegin.h  README.md  main.cpp  step_0-0.ui  step_0-1.ui  step_0-2-1.ui  step_0-2.ui  step_0-3.ui  step_0-4.ui  step_0-5.ui  step_0.ui  step_1-1.ui  step_1.cpp  step_1.h  step_1.ui  step_2.cpp  step_2.h  step_2.ui  step_3-1.ui  step_3.cpp  step_3.h  step_3.ui  step_4.cpp  step_4.h  step_4.ui
.gear/: domain-manager.spec  rules
.github/workflows/: alt-linux-ci.yml
script/: build.sh
src/: CMakeLists.txt  main.cpp
